# YOLO-Sallys-Eyes

./: .cursorrules  .gitignore  LICENSE  Makefile  PROJECT_STATUS.md  README.md  spike.py
.claude/: settings.local.json
backend/: main.py  pyproject.toml  requirements.txt
backend/_legacy_salamander/: state.py
backend/_legacy_salamander/vision/: yolo_tracking.py
backend/_legacy_tests/contracts/: test_contracts.py
backend/_legacy_tests/contracts/golden/: error_response.json  job_status.json  track_summary.json
backend/_legacy_tests/transitions/: test_frame_processed.py
backend/_legacy_tests/vision/: test_normalization.py
backend/salamander/: contracts.py  state.py  transitions.py
backend/salamander/vision/: normalization.py
backend/tests/: test_state.py
backend/tests/contracts/: test_contract_version.py  test_contracts.py
backend/tests/contracts/golden/: bbox.json  center.json  detection.json  frame_record.json  job_error.json  job_metrics.json  job_progress.json  job_request.json  metrics_warnings.json  processing_metadata.json
backend/tests/transitions/: test_ready_to_track.py  test_start_processing.py  test_submit_job.py
backend/tests/vision/: test_yolo_tracking.py
backend/training/: prepare.py
frontend/lib/: contracts.ts
frontend/src/: App.jsx
tools/: extract_frames.py  generate_ts_types.py  trim_video.py
