[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "salamander-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pydantic-to-typescript",
]

[tool.setuptools]
packages = ["salamander"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
